# Domain_Driven_Design

./: Cargo.toml  README.md
src/: main.rs
src/application/: commands.rs
src/domain/: errors.rs  mod.rs  models.rs  services.rs
src/infrastructure/: database.rs  http.rs  mod.rs  repositories.rs
