[package]
name = "library-management-system"
version = "0.1.0"
edition = "2021"

# Dependencies required by the project
[dependencies]
# Asynchronous runtime
tokio = { version = "1", features = ["full"] }
# HTTP server and routing
axum = "0.6"
# Serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Date and time handling
chrono = { version = "0.4", features = ["serde"] }
# Thread-safe containers and concurrency support
parking_lot = "0.12"
# Logging (optional for debugging and server logs)
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = "0.3"

# Development dependencies for testing
[dev-dependencies]
# Testing framework
tokio = { version = "1", features = ["test-util"] }